Fix alignment and word wrapping issues

--- a/assets/styles/components/elements/_tables.scss
+++ b/assets/styles/components/elements/_tables.scss
@@ -76,6 +76,21 @@
       border-bottom: 0;
       border-left: 0;
     }
+
+    &.alignleft {
+      float: left;
+      margin-right: if-map-get($table-alignleft-margin-right, $type);
+    }
+  
+    &.aligncenter {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+    &.alignright {
+      float: right;
+      margin-left: if-map-get($table-alignright-margin-left, $type);
+    }
   }
 
   table,
@@ -169,6 +184,21 @@
         border-right: 0;
         border-bottom: 0;
         border-left: 0;
+      }
+
+      &.alignleft {
+        float: left;
+        margin-right: if-map-get($table-alignleft-margin-right, $type);
+      }
+    
+      &.aligncenter {
+        margin-left: auto;
+        margin-right: auto;
+      }
+    
+      &.alignright {
+        float: right;
+        margin-left: if-map-get($table-alignright-margin-left, $type);
       }
     }
 
